--- a/app/components/main-menu/nd-main-menu.scss
+++ b/app/components/main-menu/nd-main-menu.scss
@@ -286,6 +286,10 @@
       font-size: pxtovw(15, 375);
     }
 
+    &:hover {
+      color: $nd-color-main;
+    }
+
     &_short {
       padding: 5px 0 6px;
 
@@ -328,7 +332,7 @@
       }
 
       &:hover span {
-        background-image: linear-gradient($nd-color-main, $nd-color-main);
+        // background-image: linear-gradient($nd-color-main, $nd-color-main);
       }
     }
 
