--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -368,6 +368,10 @@
       font-size: pxtovw(16, 375);
       margin-top: pxtovw(50, 375);
     }
+
+    &_gray {
+      color: $nd-color-gray-text;
+    }
   }
 
   &__links {
@@ -416,6 +420,10 @@
   }
 
   &_profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
     min-height: 363px;
     padding: 52px 0 40px;
 
