--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -19,12 +19,9 @@
   letter-spacing: normal;
   padding: 0 34px;
   z-index: 0;
-  background-repeat: no-repeat;
-  background-position: 0 50%;
-  background-size: 200% 100%;
   transition: transform $ease-main;
   transform-origin: 50% 50%;
-  will-change: background-position;
+  overflow: hidden;
 
   @include screen('xlg', max, 2) {
     height: pxtovw(40, 1660);
@@ -54,8 +51,27 @@
     border-radius: pxtovw(20, 375);
   }
 
-  &:hover {
+  &::before {
+    @include pseudo;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: var(--bgpos-x) 50%;
+    background-size: 200% 200%;
+    opacity: 0;
+    transition: opacity .25s ease;
     background-image: linear-gradient(90.5deg, rgba(#0085ff, 0) 25.06%, #00b2ff 48.74%, rgba(#0085ff, 0) 74.96%);
+    will-change: background-position;
+    z-index: 0;
+  }
+
+  &:hover {
+    &::before {
+      opacity: 1;
+    }
   }
 
   &:active {
@@ -73,7 +89,7 @@
   &[disabled], &.is-disabled {
     cursor: not-allowed;
     pointer-events: none;
-    opacity: .2;
+    background-color: $nd-color-border4;
   }
 
   &.is-loading {
@@ -116,6 +132,7 @@
     fill: inherit;
     width: 20px;
     height: 20px;
+    z-index: 2;
 
     @include screen('xlg', max, 2) {
       width: pxtovw(20, 1660);
@@ -520,6 +537,12 @@
     }
   }
 
+  &_dis-blue {
+    &[disabled], &.is-disabled {
+      background-color: $nd-color-main;
+    }
+  }
+
   &_border {
     box-sizing: border-box;
     border: 1px solid $nd-color-border;
@@ -535,10 +558,17 @@
       color: $nd-color-logo;
     }
 
+    &::before {
+      display: none;
+    }
+
     &:hover {
       background-color: transparent;
       border-color: $nd-color-field-border-hover;
-      background-image: none;
+    }
+
+    &[disabled],&.is-disabled {
+      background-color: transparent;
     }
   }
 
