--- a/app/blocks/slider-navigation/slider-navigation.pug
+++ b/app/blocks/slider-navigation/slider-navigation.pug
@@ -1,8 +1,9 @@
-mixin slider-navigation(data, startSlide, activeName)
+mixin slider-navigation(data, startSlide, activeName, linkClasses)
   +b.js-nav-slider.slider-navigation__&attributes(attributes)(data-first-slide-index=startSlide)
     .swiper-wrapper
       each item in data
         - var addClass = (item.name == activeName) ? ' is-active' : '';
+        -if (linkClasses) addClass += linkClasses;
         if !item.list
           +e.slide.swiper-slide
             if item.marker
