--- a/app/components/registration-form/registration-form.pug
+++ b/app/components/registration-form/registration-form.pug
@@ -16,12 +16,12 @@ mixin registration-form(data)
       +form-section(data-step="startSelection")
         if data.registration
           +e.methods(data-checker-target="registrationMethod")
-            +nd-button()._sm-fz15._h60.js-stp-form-next(href="javascript();" data-next-step="registrationForm") Sign up with E-mail
+            +nd-button()._sm-fz15._h60._dis-blue.js-stp-form-next(href="javascript();" data-next-step="registrationForm") Sign up with E-mail
             +nd-button-icon('a', {image: {src: 'assets/images/nd/google.svg', cls: '_gg'}})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Sign up with Google
             +nd-button-icon('a', {image: {src: 'assets/images/nd/facebook.svg', cls: "_fb"}})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Sign up with Facebook
         if data.login
           +e.methods
-            +nd-button()._sm-fz15._h60.js-stp-form-next(href="javascript();" data-next-step="loginForm") Login with E-mail
+            +nd-button()._sm-fz15._h60._dis-blue.js-stp-form-next(href="javascript();" data-next-step="loginForm") Login with E-mail
             +nd-button-icon('a', {image: 'assets/images/nd/google.svg'})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Login with Google
             +nd-button-icon('a', {image: 'assets/images/nd/facebook.svg'})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Login with Facebook
     if (data.registration)
@@ -218,12 +218,12 @@ mixin registration-form-summary(data)
       +form-section(data-step="startSelection")
         if data.registration
           +e.methods(data-checker-target="registrationMethod")
-            +nd-button()._sm-fz15._h60.js-stp-form-next(href="javascript();" data-next-step="registrationForm") Sign up with E-mail
+            +nd-button()._sm-fz15._h60._dis-blue.js-stp-form-next(href="javascript();" data-next-step="registrationForm") Sign up with E-mail
             +nd-button-icon('a', {image: {src: 'assets/images/nd/google.svg', cls: '_gg'}})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Sign up with Google
             +nd-button-icon('a', {image: {src: 'assets/images/nd/facebook.svg', cls: "_fb"}})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Sign up with Facebook
         if data.login
           +e.methods
-            +nd-button()._sm-fz15._h60.js-stp-form-next(href="javascript();" data-next-step="loginForm") Login with E-mail
+            +nd-button()._sm-fz15._h60._dis-blue.js-stp-form-next(href="javascript();" data-next-step="loginForm") Login with E-mail
             +nd-button-icon('a', {image: 'assets/images/nd/google.svg'})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Login with Google
             +nd-button-icon('a', {image: 'assets/images/nd/facebook.svg'})._sm-fz15._border._border_gray._border_gray-txt._h60(href="#") Login with Facebook
     if (data.registration)
